# your-cross

./: .gitignore  404.html  CHANGELOG.md  README.md  documentação_inicial_do_sistema.txt  gen_reference.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini  sitemap.xml
.github/workflows/: deploy.yml  release.yml  test.yml
changelog/: index.html
docs/: changelog.md  index.md
docs/docs/: api.md
docs/guia/: comandos.md  instalacao.md
docs/scripts/: gera_diagra_casos_de_uso.puml  gerar_diagrama_classes.puml  puppeteer-config.cjs
docs/stylesheets/css/: extra.css
docs/tech/: estrutura.md
docs/tech/diagramas/: arquitetura_backend.md  arquitetura_backend.mmd  casos_uso.md  der.md  der.puml  diagrama_classes.md  dicionario_dados.md  mer.md  mer.puml
guia/comandos/: index.html
guia/instalacao/: index.html
reference/yourcross.core/: index.html
reference/yourcross.treinos/: index.html
scripts/: dicionario_dados.csv  gerar_svg_mermaid.sh
search/: search_index.json
src/config/: settings.py
streamlit_app/: Home.py
stylesheets/javascripts/: extra.js
tech/api/: index.html
tech/diagramas/: arquitetura_backend.puml
tech/diagramas/arquitetura_backend/: index.html
tech/diagramas/casos_uso/: index.html
tech/diagramas/der/: index.html
tech/diagramas/diagrama_classes/: index.html
tech/diagramas/dicionario_dados/: index.html
tech/diagramas/mer/: index.html
tech/estrutura/: index.html
tests/: test_db.py  test_sanity.py
your_cross/config/: settings.py
