[project]
name = "your-cross"
version = "0.1.0"
description = ""
authors = [
    {name = "cileno",email = "cileno12@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "your_cross", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
